Update Lucas legend add

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
 			
         var legend = L.control({position: 'bottomright'}); // Try the other three corners if you like.
+		legen.addTo(map1);
 		
 
         legend.onAdd = function (map1) {
