--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             return div;
 			};
 
-			legend.addTo(map);
+			legend.addTo(map1);
 		
 			var basemaps = {
 			"Street Map": StreetMap,
