--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
  <head>
         <title>DecemberFinal</title>
 
@@ -123,7 +122,7 @@
             return div;
 			};
 
-			legend.addTo(map1);
+			legend.addTo(map);
 		
 			var basemaps = {
 			"Street Map": StreetMap,
@@ -213,7 +212,7 @@
 
 			
         var legend = L.control({position: 'bottomright'}); // Try the other three corners if you like.
-		legen.addTo(map1);
+		legend.addTo(map1);
 		
 
         legend.onAdd = function (map1) {
