--- a/index.html
+++ b/index.html
@@ -41,6 +41,25 @@
               opacity: 0.7;
           }
         </style>
+	 <style>
+          /* Optional: adjust the values below to change the appearance of the legend */
+          .legend1 {
+              padding: 6px 8px;
+              line-height: 18px;
+              background: rgba(255,255,255,0.9);
+              box-shadow: 0 0 15px rgba(0,0,0,0.2);
+              border-radius: 5px;
+          }
+
+           /* Optional: adjust the values below to change the appearance of the legend color boxes */
+           .legend1 i {
+              width: 18px;
+              height: 18px;
+              float: left;
+              margin-right: 8px;
+              opacity: 0.7;
+          }
+        </style>
 
     </head>
 <!-- Tab links -->
@@ -108,10 +127,10 @@
 		
 		
 		
-		var legend = L.control({position: 'bottomright'}); // Try the other three corners if you like.
+		var legend1 = L.control({position: 'bottomright'}); // Try the other three corners if you like.
 		
 
-				legend.onAdd = function (map) {
+				legend1.onAdd = function (map) {
 
             var div = L.DomUtil.create('div', 'legend'),
                 grades = [0, 1847, 3852, 5368, 8257]; // The break values to define the intervals of population, note we begin from 0 here
@@ -123,7 +142,7 @@
             return div;
 			};
 
-			legend.addTo(map);
+			legend1.addTo(map);
 		
 			var basemaps = {
 			"Street Map": StreetMap,
@@ -140,14 +159,14 @@
 			// Removing the legend when the layer is removed
 			map.on('overlayremove', function(eventLayer){
 			if (eventLayer.name == 'Chicago Area Data'){ // We use the key/display name to refer to the layer
-			map.removeControl(legend); // legend is the variable name of the layer legend
+			map.removeControl(legend1); // legend is the variable name of the layer legend
 			}
 			});
 
 			// Adding the legend when the layer is added
 			map.on('overlayadd', function(eventLayer){
 			if (eventLayer.name == 'Chicago Area Data'){
-								legend.addTo(map);
+								legend1.addTo(map);
 			}
 			});
         </script>
