--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
 
 			
         var legend = L.control({position: 'bottomright'}); // Try the other three corners if you like.
-		
 
         legend.onAdd = function (map1) {
 
@@ -251,6 +250,8 @@
 
             return div;
         };
+
+        legend.addTo(map1);
 		
 		
 
