--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Jeremiah')">Jeremiah</button>
   <button class="tablinks" onclick="openCity(event, 'Lucas')">Lucas</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Nitish</button>
+  <button class="tablinks" onclick="openCity(event, 'Nitish')">Nitish</button>
 </div>
 
 <!-- Tab content -->
@@ -183,7 +183,7 @@
 
 <hr>
 
-<div id="Paris" class="tabcontent">
+<div id="Lucas" class="tabcontent">
   <h3>Lucas</h3>
    <body style="background-color:powderblue;">
 	<h1 style="font-family:verdana;">Healthcare Access in Chicago</h1>
@@ -306,7 +306,7 @@
    </body>
 </div>
 
-<div id="Tokyo" class="tabcontent">
+<div id="Nitish" class="tabcontent">
   <h3>Nitish</h3>
    <body style="background-color:powderblue;">
 	<h1 style="font-family:verdana;">Income and Insurance Access in Chicago</h1>
@@ -464,7 +464,7 @@
 
         </script>
 		<h2 style="font-family:verdana;">Purpose of this Study</h2>
-		<p style="font-family:courier;">This map represents the total population of Chicago in census tracts in relation to medical facility locations. This research will help us determine what communities are under-served/over-served. This will show the distribution by each community within Chicago as depicted by the dividing lines within each census tract (per 2020 data). The blue markers indicate medical facility locations.
+		<p style="font-family:courier;">This map represents the rate of insurance coverage in Chicago tracts, as well as median household income. The objective was to find a correlation (if any) between levels of income and accessibility to insurance coverage. We found that the lack of medical facilities mildly overlapped with clusters of tracts that also showed lower-income, relatively lower insurance rates, and a mild correlation to population densities.
 </p>
    </body>
 </div>
