nitish map color  bands changed
Nothing still works, but figured I'd at least ensure what could be completed, was complete.

--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@
 			
 			
            function getColor4(value) {
-              return value > 132885 ? '#ffffcc':
-                     value > 93000  ? '#7fcdbb':
-                     value > 62625  ? '#41b6c4':
-                     value > 37917  ? '#2c7fb8':
-                                     '#253494';
+              return value > 132885 ? '#ffea46':
+                     value > 93000  ? '#beaf6f':
+                     value > 62625  ? '#7d7c78':
+                     value > 37917  ? '#414d6b':
+                                     '#00204d';
           }
 		  function getColor5(value) {
               return value > 99 ? '#fde725':
